4515.	[port]		FreeBSD: Find readline headers when they are in
			edit/readline/ instead of readline/. [RT #43658]

4514.	[port]		NetBSD: strip -WL, from ld command line. [RT #43204]

4513.	[cleanup]	Minimum Python versions are now 2.7 and 3.2.
			[RT #43566]

4512.	[bug]		win32: @GEOIP_INC@ missing from delv.vcxproj.in.
			[RT #43556]

4511.	[bug]		win32: mdig.exe-BNFT was missing Configure. [RT #43554]

4509.	[test]		Make the rrl system test more reliable on slower
			machines by using mdig instead of dig. [RT #43280]

4507.	[bug]		Named could incorrectly log 'allows updates by IP
			address, which is insecure' [RT #43432]

4505.	[port]		Use IP_PMTUDISC_OMIT if available. [RT #35494]

4504.	[security]	Allow the maximum number of records in a zone to
			be specified.  This provides a control for issues
			raised in CVE-2016-6170. [RT #42143]

4503.	[cleanup]	"make uninstall" now removes files installed by
			BIND. (This currently excludes Python files
			due to lack of support in setup.py.) [RT #42912]

4502.	[func]		Report multiple and experimental options when printing
			grammar. [RT #43134]

4500.	[bug]		Support modifier I64 in isc__print_printf. [RT #43526]

4499.	[port]		MacOSX: silence deprecated function warning
			by using arc4random_stir() when available
			instead of arc4random_addrandom(). [RT #43503]

4498.	[test]		Simplify prerequisite checks in system tests.
			[RT #43516]

4497.	[port]		Add support for OpenSSL 1.1.0. [RT #41284]

4496.	[func]		dig: add +idnout to control whether labels are
			display in punycode or not.  Requires idn support
			to be enabled at compile time. [RT #43398]

4495.	[bug]		A isc_mutex_init call was not being checked.
			[RT #43391]

4494.	[bug]		Look for <editline/readline.h>. [RT #43429]

4493.	[bug]		bin/tests/system/dyndb/driver/Makefile.in should use
			SO_TARGETS. [RT# 43336]

4492.	[bug]		irs_resconf_load failed to initialise sortlistnxt
			causing bad writes if resolv.conf contained a